# LLM-fastapi

./: .gitignore  README.md  pyproject.toml
app/: main.py  main.test.steam.py  main1.py
app/api/endpoints/: chatbot_endpoint.py  process_document_endpoint.py  process_image_endpoint.py
app/core/: logging_config.py
app/services/: chatbot_processor.py  image_processor.py  pdf_processor.py
app/services/services/: image_processor.py  pdf_processor.py
tests/: test_main.py
