[tool.poetry]
name = "ai-api"
version = "0.1.0"
description = ""
authors = ["Guilherme Chaves Volpato <volpato2103@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.114.1"
faiss-cpu = "^1.8.0.post1"
pymupdf = "^1.24.10"
tiktoken = "^0.7.0"
langchain = "^0.2.16"
langchain-openai = "^0.1.25"
langchain-community = "^0.2.17"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
pytesseract = "^0.3.13"
easyocr = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
